add points, community...

--- a/mobile/src/localization/translations/en.json
+++ b/mobile/src/localization/translations/en.json
@@ -46,11 +46,19 @@
     "addPet": "Add Pet",
     "noPets": "No pets yet",
     "noPetsSubtitle": "Start by adding your first companion!",
+    "petSelected": "pet selected",
+    "petsSelected": "pets selected",
+    "species": {
+      "dog": "Dog",
+      "cat": "Cat"
+    },
     "addAnimal": "Add an animal",
     "addPetTitle": "Add a Pet",
     "addPetSubtitle": "Add your companion to your Pet of the Day profile",
     "name": "Name",
     "species": "Species",
+    "dog": "Dog",
+    "cat": "Cat",
     "breed": "Breed",
     "birthDate": "Birth Date",
     "photoUrl": "Photo URL",
@@ -58,6 +66,12 @@
     "additionalInfo": "Additional Information",
     "dateFormatHelp": "Format: YYYY-MM-DD (eg: 2020-01-15)",
     "photoUrlHelp": "Link to a photo of your pet",
+    "addSuccess": "Your pet has been added successfully!",
+    "updateSuccess": "Your pet has been updated successfully!",
+    "editPet": "Edit Pet",
+    "deletePet": "Delete Pet",
+    "deleteConfirmTitle": "Delete Pet",
+    "deleteConfirmMessage": "Are you sure you want to delete {{name}}? This action cannot be undone.",
     "validations": {
       "nameRequired": "Pet name is required",
       "speciesRequired": "Pet species is required",
@@ -68,16 +82,170 @@
     },
     "placeholders": {
       "petName": "Archie, Arthas, Betty...",
-      "species": "Dog, Cat, Rabbit...",
+      "species": "Select species",
       "breed": "Labrador, Persian, Lop...",
       "photoUrl": "https://example.com/photo.jpg"
     }
+  },
+  "groups": {
+    "title": "Groups",
+    "myGroups": "My Groups",
+    "createdGroups": "Created Groups",
+    "joinedGroups": "Joined Groups",
+    "noGroups": "No groups yet",
+    "noGroupsSubtitle": "Create or join a group to get started!",
+    "createGroup": "Create Group",
+    "joinGroup": "Join Group",
+    "leaveGroup": "Leave Group",
+    "groupName": "Group Name",
+    "groupDescription": "Description",
+    "members": "Members",
+    "inviteMembers": "Invite Members",
+    "inviteCode": "Invite Code",
+    "joinWithCode": "Join with Code",
+    "manageMyPets": "Manage My Pets",
+    "addedPets": "Added Pets",
+    "noPetsInGroup": "No pets added to this group",
+    "addPetsToGroup": "Add pets to this group",
+    "createGroupTitle": "Create New Group",
+    "createGroupSubtitle": "Create a group to share pets with friends",
+    "joinGroupTitle": "Join Group",
+    "joinGroupSubtitle": "Enter an invite code to join a group",
+    "success": {
+      "groupCreated": "Group created successfully!",
+      "groupJoined": "Successfully joined the group!",
+      "groupLeft": "Left the group successfully",
+      "groupUpdated": "Group updated successfully!",
+      "petsUpdated": "Pets updated successfully"
+    },
+    "placeholders": {
+      "groupName": "My Pet Family",
+      "description": "A group for our pets...",
+      "inviteCode": "Enter invite code"
+    },
+    "validations": {
+      "nameRequired": "Group name is required",
+      "descriptionRequired": "Description is required",
+      "codeRequired": "Invite code is required"
+    },
+    "privacy": {
+      "title": "Privacy",
+      "private": "Private",
+      "privateDescription": "Only invited members can join this group",
+      "public": "Public",
+      "publicDescription": "Anyone with the invite code can join this group"
+    },
+    "editGroup": "Edit Group",
+    "deleteConfirmTitle": "Delete Group",
+    "deleteConfirmMessage": "Are you sure you want to delete {{name}}? This action cannot be undone.",
+    "basicInfo": "Basic Information"
   },
   "navigation": {
     "home": "Home",
     "myPets": "My Pets",
     "profile": "Profile",
-    "settings": "Settings"
+    "settings": "Settings",
+    "groups": "Groups"
+  },
+  "errors": {
+    "emailAlreadyExists": "This email is already in use",
+    "invalidCredentials": "Invalid email or password",
+    "weakPassword": "Password is too weak",
+    "invalidEmail": "Invalid email format",
+    "fieldRequired": "This field is required",
+    "invalidFormat": "Invalid format",
+    "invalidInput": "Invalid input",
+    "validationFailed": "Validation failed",
+    "tooShort": "Too short",
+    "tooLong": "Too long",
+    "userNotFound": "User not found",
+    "petNotFound": "Pet not found",
+    "petAlreadyExists": "Pet already exists",
+    "invalidSpecies": "Invalid species",
+    "serverError": "Server error. Please try again later",
+    "networkError": "Network error. Please check your connection",
+    "unauthorized": "You are not authorized to perform this action",
+    "forbidden": "Access denied"
+  },
+  "settings": {
+    "appearance": "Appearance",
+    "theme": "Theme",
+    "themeDescription": "Choose between light and dark mode",
+    "light": "Light",
+    "dark": "Dark",
+    "language": "Language",
+    "languageDescription": "Choose your preferred language"
+  },
+  "points": {
+    "title": "Points & Leaderboard",
+    "addAction": "Add Action",
+    "leaderboard": "Leaderboard",
+    "dailyLeaderboard": "Daily Ranking",
+    "weeklyLeaderboard": "Weekly Ranking",
+    "petOfTheDay": "Pet of the Day",
+    "petOfTheWeek": "Pet of the Week",
+    "totalPoints": "Total Points",
+    "actionsCount": "Actions",
+    "rank": "Rank",
+    "noActions": "No actions yet",
+    "noActionsSubtitle": "Start recording your pet's behavior to earn points!",
+    "recordAction": "Record Action",
+    "selectBehavior": "Select Behavior",
+    "selectPet": "Select Pet",
+    "addComment": "Add Comment (optional)",
+    "actionDate": "Action Date",
+    "todayPoints": "points today",
+    "recentActions": "Recent Actions",
+    "categories": {
+      "hygiene": "Hygiene",
+      "play": "Play & Activity",
+      "training": "Training",
+      "socialization": "Socialization",
+      "care": "Care",
+      "behavior": "Behavior"
+    },
+    "behaviors": {
+      "needs_outside": "Needs outside",
+      "needs_inside": "Needs inside",
+      "litter_box": "Used litter box",
+      "play_session": "Play session (15+ min)",
+      "short_walk": "Short walk (<30min)",
+      "long_walk": "Long walk (30+ min)",
+      "running": "Running/exercise",
+      "play_with_others": "Played with other pets",
+      "obey_sit": "Obeyed 'sit' command",
+      "obey_down": "Obeyed 'down' command",
+      "recall": "Came when called",
+      "new_trick": "Learned new trick",
+      "loose_leash": "Walked nicely on leash",
+      "disobey": "Didn't obey commands",
+      "meet_new_pet": "Met new dog/cat",
+      "good_vet": "Good behavior at vet",
+      "good_with_guests": "Good with visitors",
+      "aggressive": "Aggressive/fearful behavior",
+      "exemplary_public": "Exemplary in public",
+      "accept_brushing": "Accepted brushing",
+      "calm_bath": "Calm during bath",
+      "nail_trim": "Nail trimming",
+      "take_medicine": "Took medicine",
+      "refuse_care": "Refused care",
+      "very_calm": "Very calm/well-behaved",
+      "destruction": "Destroyed objects",
+      "excessive_barking": "Excessive barking",
+      "steal_food": "Stole food",
+      "guard_house": "Protected the house"
+    },
+    "success": {
+      "actionRecorded": "Action recorded successfully!",
+      "actionRecordedInGroups": "Action recorded in {{count}} group(s)",
+      "actionDeleted": "Action deleted successfully!"
+    },
+    "validations": {
+      "behaviorRequired": "Please select a behavior",
+      "petRequired": "Please select a pet",
+      "commentTooLong": "Comment is too long",
+      "noGroupsFound": "No groups found for this pet"
+    }
   },
   "common": {
     "ok": "OK",
@@ -90,10 +258,20 @@
     "loading": "Loading...",
     "error": "Error",
     "retry": "Retry",
+    "selectAll": "Select All",
+    "deselectAll": "Deselect All",
     "refresh": "Refresh",
     "success": "Success",
     "addSuccess": "Your pet has been added successfully!",
     "optional": "(optional)",
-    "dateFormat": "Format: YYYY-MM-DD (ex: 2020-01-15)"
+    "dateFormat": "Format: YYYY-MM-DD (ex: 2020-01-15)",
+    "points": "points",
+    "notSpecified": "Not specified",
+    "justNow": "Just now",
+    "minutesAgo": "{{count}}min",
+    "hoursAgo": "{{count}}h",
+    "daysAgo": "{{count}}d",
+    "recentActivity": "Recent Activity",
+    "viewAll": "View All"
   }
 }
