--- a/mobile/src/localization/translations/fr.json
+++ b/mobile/src/localization/translations/fr.json
@@ -46,11 +46,19 @@
     "addPet": "Ajouter un animal",
     "noPets": "Aucun animal de compagnie",
     "noPetsSubtitle": "Commencez par ajouter votre premier compagnon !",
+    "petSelected": "animal sélectionné",
+    "petsSelected": "animaux sélectionnés",
+    "species": {
+      "dog": "Chien",
+      "cat": "Chat"
+    },
     "addAnimal": "Ajouter un animal",
     "addPetTitle": "Ajouter un animal",
     "addPetSubtitle": "Ajoutez votre compagnon à votre profil Pet of the Day",
     "name": "Nom",
     "species": "Espèce",
+    "dog": "Chien",
+    "cat": "Chat",
     "breed": "Race",
     "birthDate": "Date de naissance",
     "photoUrl": "URL de la photo",
@@ -59,6 +67,11 @@
     "dateFormatHelp": "Format: YYYY-MM-DD (ex: 2020-01-15)",
     "photoUrlHelp": "Lien vers une photo de votre animal",
     "addSuccess": "Votre animal a été ajouté avec succès !",
+    "updateSuccess": "Votre animal a été modifié avec succès !",
+    "editPet": "Modifier l'animal",
+    "deletePet": "Supprimer l'animal",
+    "deleteConfirmTitle": "Supprimer l'animal",
+    "deleteConfirmMessage": "Êtes-vous sûr de vouloir supprimer {{name}} ? Cette action est irréversible.",
     "validations": {
       "nameRequired": "Le nom de l'animal est requis",
       "speciesRequired": "L'espèce de l'animal est requise",
@@ -69,16 +82,170 @@
     },
     "placeholders": {
       "petName": "Archie, Arthas, Betty...",
-      "species": "Chien, Chat, Lapin...",
+      "species": "Sélectionner l'espèce",
       "breed": "Labrador, Persan, Bélier...",
       "photoUrl": "https://example.com/photo.jpg"
     }
+  },
+  "groups": {
+    "title": "Groupes",
+    "myGroups": "Mes Groupes",
+    "createdGroups": "Groupes Créés",
+    "joinedGroups": "Groupes Rejoints",
+    "noGroups": "Aucun groupe",
+    "noGroupsSubtitle": "Créez ou rejoignez un groupe pour commencer !",
+    "createGroup": "Créer un Groupe",
+    "joinGroup": "Rejoindre le Groupe",
+    "leaveGroup": "Quitter le Groupe",
+    "groupName": "Nom du Groupe",
+    "groupDescription": "Description",
+    "members": "Membres",
+    "inviteMembers": "Inviter des Membres",
+    "inviteCode": "Code d'Invitation",
+    "joinWithCode": "Rejoindre avec un Code",
+    "manageMyPets": "Gérer Mes Animaux",
+    "addedPets": "Animaux Ajoutés",
+    "noPetsInGroup": "Aucun animal ajouté à ce groupe",
+    "addPetsToGroup": "Ajouter des animaux à ce groupe",
+    "createGroupTitle": "Créer un Nouveau Groupe",
+    "createGroupSubtitle": "Créez un groupe pour partager des animaux avec des amis",
+    "joinGroupTitle": "Rejoindre un Groupe",
+    "joinGroupSubtitle": "Entrez un code d'invitation pour rejoindre un groupe",
+    "success": {
+      "groupCreated": "Groupe créé avec succès !",
+      "groupJoined": "Groupe rejoint avec succès !",
+      "groupLeft": "Groupe quitté avec succès",
+      "groupUpdated": "Groupe mis à jour avec succès !",
+      "petsUpdated": "Animaux mis à jour avec succès"
+    },
+    "placeholders": {
+      "groupName": "Ma Famille d'Animaux",
+      "description": "Un groupe pour nos animaux...",
+      "inviteCode": "Entrez le code d'invitation"
+    },
+    "validations": {
+      "nameRequired": "Le nom du groupe est requis",
+      "descriptionRequired": "La description est requise",
+      "codeRequired": "Le code d'invitation est requis"
+    },
+    "privacy": {
+      "title": "Confidentialité",
+      "private": "Privé",
+      "privateDescription": "Seuls les membres invités peuvent rejoindre ce groupe",
+      "public": "Public",
+      "publicDescription": "Toute personne avec le code d'invitation peut rejoindre ce groupe"
+    },
+    "editGroup": "Modifier le Groupe",
+    "deleteConfirmTitle": "Supprimer le Groupe",
+    "deleteConfirmMessage": "Êtes-vous sûr de vouloir supprimer {{name}} ? Cette action est irréversible.",
+    "basicInfo": "Informations de Base"
   },
   "navigation": {
     "home": "Accueil",
     "myPets": "Mes animaux",
     "profile": "Profil",
-    "settings": "Paramètres"
+    "settings": "Paramètres",
+    "groups": "Groupes"
+  },
+  "errors": {
+    "emailAlreadyExists": "Cet email est déjà utilisé",
+    "invalidCredentials": "Email ou mot de passe invalide",
+    "weakPassword": "Le mot de passe est trop faible",
+    "invalidEmail": "Format d'email invalide",
+    "fieldRequired": "Ce champ est requis",
+    "invalidFormat": "Format invalide",
+    "invalidInput": "Saisie invalide",
+    "validationFailed": "La validation a échoué",
+    "tooShort": "Trop court",
+    "tooLong": "Trop long",
+    "userNotFound": "Utilisateur non trouvé",
+    "petNotFound": "Animal non trouvé",
+    "petAlreadyExists": "Cet animal existe déjà",
+    "invalidSpecies": "Espèce invalide",
+    "serverError": "Erreur serveur. Veuillez réessayer plus tard",
+    "networkError": "Erreur réseau. Vérifiez votre connexion",
+    "unauthorized": "Vous n'êtes pas autorisé à effectuer cette action",
+    "forbidden": "Accès refusé"
+  },
+  "settings": {
+    "appearance": "Apparence",
+    "theme": "Thème",
+    "themeDescription": "Choisissez entre le mode clair et sombre",
+    "light": "Clair",
+    "dark": "Sombre",
+    "language": "Langue",
+    "languageDescription": "Choisissez votre langue préférée"
+  },
+  "points": {
+    "title": "Points & Classement",
+    "addAction": "Ajouter Action",
+    "leaderboard": "Classement",
+    "dailyLeaderboard": "Classement Quotidien",
+    "weeklyLeaderboard": "Classement Hebdomadaire",
+    "petOfTheDay": "Animal du Jour",
+    "petOfTheWeek": "Animal de la Semaine",
+    "totalPoints": "Points Totaux",
+    "actionsCount": "Actions",
+    "rank": "Rang",
+    "noActions": "Aucune action",
+    "noActionsSubtitle": "Commencez à enregistrer le comportement de votre animal pour gagner des points !",
+    "recordAction": "Enregistrer Action",
+    "selectBehavior": "Choisir Comportement",
+    "selectPet": "Choisir Animal",
+    "addComment": "Ajouter Commentaire (optionnel)",
+    "actionDate": "Date de l'Action",
+    "todayPoints": "points aujourd'hui",
+    "recentActions": "Actions Récentes",
+    "categories": {
+      "hygiene": "Hygiène",
+      "play": "Jeu & Activité",
+      "training": "Dressage",
+      "socialization": "Socialisation",
+      "care": "Soins",
+      "behavior": "Comportement"
+    },
+    "behaviors": {
+      "needs_outside": "Besoins dehors",
+      "needs_inside": "Besoins dedans",
+      "litter_box": "A utilisé la litière",
+      "play_session": "Session de jeu (15+ min)",
+      "short_walk": "Courte promenade (<30min)",
+      "long_walk": "Longue promenade (30+ min)",
+      "running": "Course/exercice",
+      "play_with_others": "A joué avec d'autres animaux",
+      "obey_sit": "A obéi à 'assis'",
+      "obey_down": "A obéi à 'couché'",
+      "recall": "Est revenu au rappel",
+      "new_trick": "A appris un nouveau tour",
+      "loose_leash": "A marché bien en laisse",
+      "disobey": "N'a pas obéi",
+      "meet_new_pet": "A rencontré un nouveau chien/chat",
+      "good_vet": "Bon comportement chez le véto",
+      "good_with_guests": "Bon avec les invités",
+      "aggressive": "Comportement agressif/peureux",
+      "exemplary_public": "Exemplaire en public",
+      "accept_brushing": "A accepté le brossage",
+      "calm_bath": "Calme pendant le bain",
+      "nail_trim": "Coupe des griffes",
+      "take_medicine": "A pris ses médicaments",
+      "refuse_care": "A refusé les soins",
+      "very_calm": "Très calme/sage",
+      "destruction": "A détruit des objets",
+      "excessive_barking": "Aboiements excessifs",
+      "steal_food": "A volé de la nourriture",
+      "guard_house": "A protégé la maison"
+    },
+    "success": {
+      "actionRecorded": "Action enregistrée avec succès !",
+      "actionRecordedInGroups": "Action enregistrée dans {{count}} groupe(s)",
+      "actionDeleted": "Action supprimée avec succès !"
+    },
+    "validations": {
+      "behaviorRequired": "Veuillez choisir un comportement",
+      "petRequired": "Veuillez choisir un animal",
+      "commentTooLong": "Le commentaire est trop long",
+      "noGroupsFound": "Aucun groupe trouvé pour cet animal"
+    }
   },
   "common": {
     "ok": "OK",
@@ -91,9 +258,19 @@
     "loading": "Chargement...",
     "error": "Erreur",
     "retry": "Réessayer",
+    "selectAll": "Sélectionner tout",
+    "deselectAll": "Désélectionner tout",
     "refresh": "Actualiser",
     "success": "Succès",
     "optional": "(optionnel)",
-    "dateFormat": "Format: YYYY-MM-DD (ex: 2020-01-15)\n"
+    "dateFormat": "Format: YYYY-MM-DD (ex: 2020-01-15)",
+    "points": "points",
+    "notSpecified": "Non spécifié",
+    "justNow": "À l'instant",
+    "minutesAgo": "{{count}}min",
+    "hoursAgo": "{{count}}h",
+    "daysAgo": "{{count}}j",
+    "recentActivity": "Activité Récente",
+    "viewAll": "Voir Tout"
   }
 }
